--- a/cv-builder/src/App.css
+++ b/cv-builder/src/App.css
@@ -1,5 +1,6 @@
 .body {
   height: 100vh;
+  background-color: rgb(230, 230, 230);
   display: flex;
   flex-direction: column;
 }
@@ -10,7 +11,8 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.userInput {
+.userInput,
+.resumeDisplay {
   display: flex;
   justify-content: center;
   align-items: center;
